...

    Scaffold(
        topBar = {
            CenterAlignedTopAppBar(
            title = { Text(text = "Favorites") },
            actions = {
                IconButton(onClick = { showDialog = true }, Modifier.testTag("addFavoriteButton")) {
                    Icon(Icons.Default.Add, contentDescription = "Add favorite")
                }
            }
        )
        }
    ) {
...
                isValidLatitude(lat) &&
                isValidLongitude(lon)
    }

    AlertDialog(
        onDismissRequest = { onDismiss() },
        title = { Text(text = "Add New Favorite") },
        text = {
            Column {
                TextField(value = name, onValueChange = { name = it }, label = { Text("Name") })
                TextField(value = lat, onValueChange = { lat = it }, label = { Text("Latitude") })
                TextField(value = lon, onValueChange = { lon = it }, label = { Text("Longitude") })
            }
...
