...
                ) {
                    Column {
                        safeGribPoints.take(if (expanded) safeGribPoints.size else 2).forEach {
                            GribPointItems(it, groundPressure, groundTemp)
                        }
                        Text(
                            text = if (expanded) "Show less..." else "Show more...",
                            modifier = Modifier
                                .align(Alignment.CenterHorizontally)
                                .padding(top = 4.dp),
                        )
                    }
                }
...
            .padding(top = 48.dp)) {
            NullableText(value = data?.data?.cloud_area_fraction_high, text = "Cloud area fraction (high):", unit = "%")
            NullableText(value = data?.data?.cloud_area_fraction_medium, text = "Cloud area fraction (medium):", unit = "%")
            NullableText(value = data?.data?.cloud_area_fraction_low, text = "Cloud area fraction (low):", unit = "%")
            NullableText(value = data?.data?.cloud_area_fraction, text = "Cloud area fraction:", unit = "%")
            NullableText(value = data?.data?.fog_area_fraction, text = "Fog area fraction:", unit="%")
            NullableText(value = data?.data?.ultraviolet_index_clear_sky, text = "UV index (Clear sky):", testTag = "UV")
        }
    }
}

@Composable
fun PrecipitationDisplay(exitFunc: () -> Unit, data: TimeAndData?){
...
